# adam_qas

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CODE_OF_CONDUCT.md  Dockerfile  ISSUE_TEMPLATE.md  LICENSE.txt  NOTES.md  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  ROADMAP.md  docker-compose.yml  requirements-docker.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
adam/: anaphora_res.py  candidate_ans.py  doc_scorer.py  feat_semi_trainer.py  feature_trainer.py  lsi_example.py  qa_init.py  qclassifier.py
corpora/: lt_questions.txt  stop_words.txt
corpus/: linus_trovalds.txt  lt_questions.txt  regdata.txt
doc/: ARCHI.md
docs/: CONTRIBUTING.md  Makefile  conf.py  index.rst  resources.rst
qas/: __init__.py  about.py  adam.py  anaphora_res.py  answer_gen.py  candidate_ans.py  constants.py  doc_scorer.py  doc_search_rank.py  feat_semi_trainer.py  feature_extractor.py  feature_trainer.py  fetch_wiki.py  fuzzy_search.py  lsi_example.py  nlp.py  qa_init.py  qclassifier.py  qclassifier_trainer.py  query_const.py  search_source.py  skeleton.py  sys_info.py  test_construct_query.py  vsm_sample.py
src/: anaphora_res.py  answer_gen.py  candidate_ans.py  doc_scorer.py  feat_semi_trainer.py  feature_extraction.py  feature_extractor.py  feature_gen.py  feature_trainer.py  fetch_wiki.py  general_tree.py  linkedlist.py  lsi_example.py  qa_init.py  qclassifier.py  qclassifier_trainer.py  query_const.py  question.py  question.py~  question_classifier.py  regular.py  spacy_nlp.py  stop_words.py  tars.py  tokenize.py  tree.dot  vsm_sample.py  wiki.py  wiki.py~  wiki_fetch.py  wiki_fetch.py~  wordnet.py
tests/: conftest.py  create_test_data.py  test_classify_question.py  test_construct_query.py  test_extract_features.py  test_skeleton.py  test_wiki_scraper.py  (+1 more)
(+43 files in other folders)
