[metadata]
name = qas
version = 0.1.dev
summary = Adam - A question answering system
author = Shirish Kadam
author-email = shirishkadam35@gmail.com
license = GNU General Public License v3 (GPLv3)
home-page = https://shirishkadam.com
description-file = README.rst
doc_files = docs/
            examples/
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Natural Language Processing

[entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = qas.module:function
# For example:
# console_scripts =
#     fibonacci = qas.skeleton:run
# as well as other entry_points.


[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of target directory
# and source location from the root of the repository:
packages =
    qas
# data_files =
#    share/qas_docs = docs/*

[extras]
# Add here additional requirements for extra features, like:
# PDF =
#    ReportLab>=1.2
#    RXP

[test]
# py.test options when running `python setup.py test`
addopts = tests

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov qas --cov-report term-missing
    --verbose

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
